<resources>
    <string name="app_name">MessengerChat</string>
    <string name="email_registrate">Email</string>
    <string name="password_registrate">Password</string>
    <string name="username_registrate">Username</string>
    <string name="button_enter_registrate">Registrate</string>
    <string name="user_have_account">Click there. If you have account</string>
    <string name="enter_msg_str">Enter Message</string>
    <string name="enter_button">Enter</string>
    <string name="exit_from_account_button">Exit</string>
    <string name="title_activity_chat_navigation">ChatNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search_user">user_search</string>
    <string name="bt_ver_email">I verified Email</string>
    <string name="click_to_change_email">Click to Change Email</string>
    <string name="setting_username">Status</string>
    <string name="username">Username</string>
    <string name="status">Status</string>
    <string name="user_email">User email</string>
    <string name="password">Password</string>
    <string name="change_name">Change Name</string>
    <string name="change_password">Change Password</string>
    <string name="theme_mode_text">Light Mode</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="new_password">New Password</string>
    <string name="sign_in">Sign In</string>
    <string name="back">Back</string>
</resources>